[package]
name = "multi-hash"
version = "1.0.0"
edition = "2021"
authors = ["Dave Grantham <dwg@linuxprogrammer.org>"]
description = "Multihash self-describing cryptographic hash data"
repository = "https://github.com/cryptidtech/multi-hash.git"
readme = "README.md"
license = "Apache-2.0"
keywords = ["multihash", "multiformats", "hash", "crypto"]
categories = ["cryptography", "encoding"]

[features]
default = ["serde"]

[dependencies]
blake2 = "0.10"
blake3 = { version = "1.5.1", features = ["traits-preview", "zeroize"] }
multi-base = { version = "1.0", path = "../multi-base" }
multi-codec = { version = "1.0", path = "../multi-codec" }
multi-trait = { version = "1.0", path = "../multi-trait" }
multi-util = { version = "1.0", path = "../multi-util" }
digest = "0.10"
hex = "0.4"
md-5 = "0.10"
ripemd = "0.1.3"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
thiserror = { version = "2.0" }
typenum = "1.17"
unsigned-varint = { version = "0.8", features = ["std"] }

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
hex = "0.4"
proptest = "1.4"
serde_cbor = "0.11"
serde_json = "1.0"
serde_test = "1.0"

[[bench]]
name = "multihash_bench"
harness = false
path = "benches/multihash_bench.rs"