[package]
name = "multi-hash"
version = "1.0.6"
edition = "2024"
rust-version = "1.85"
authors = ["Dave Grantham <dwg@linuxprogrammer.org>"]
description = "Multihash self-describing cryptographic hash data"
repository = "https://github.com/cryptidtech/multi-hash.git"
readme = "README.md"
license = "Apache-2.0"
keywords = ["multihash", "multiformats", "hash", "crypto"]
categories = ["cryptography", "encoding"]

[features]
default = ["serde"]

[dependencies]
blake2 = "0.10"
blake3 = { version = "1.5.1", features = ["traits-preview", "zeroize"] }
multi-base = "1.0"
multi-codec = "1.0"
multi-trait = "1.0"
multi-util = "1.0"
digest = "0.10"
hex = "0.4"
md-5 = "0.10"
ripemd = "0.1.3"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
subtle = "2"
thiserror = { version = "2.0" }
typenum = "1.17"
unsigned-varint = { version = "0.8", features = ["std"] }

[dev-dependencies]
ciborium = "0.2"
criterion = { version = "0.8", features = ["html_reports"] }
hex = "0.4"
proptest = "1.4"
serde_json = "1.0"
serde_test = "1.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# blake3 pulls in digest 0.11 while the other RustCrypto crates use 0.10.
# This will resolve when the rest of the ecosystem upgrades.
multiple_crate_versions = { level = "allow", priority = 1 }

[lints.rust]
unsafe_code = "deny"

[[bench]]
name = "multihash_bench"
harness = false
path = "benches/multihash_bench.rs"
